mise a jour le 13 mars 2021

--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
       <h1> Mon expérience </h1>
 </main>
       <img src="./photos/grace-violinist.jpg" alt="Grace Chabab: violoniste"><br><br>
-    <p>  Je suis Grace Chabab, née à Beyrouth, Liban, le 12 juillet 2002. J’ai 18 ans et je suis une violoniste.  J’ai commencé à étudier le violon à 7 ans avec le professeur Ibrahim Hamzi au conservatoire national supérieur de musique (Liban). Je m’entraine pour mon examen du baccalauréat. Durant mes études, j’ai joué plusieurs pièces musicales pour plusieurs compositeurs : Vivaldi, Bach, Mozart, Bruch, Beethoven, Viotti, kreutzer... En 2016, j’ai participé à un workshop présenté par « The 2016 Lebanon International String/ Orchestra Workshop-LISOW » au cours duquel j’ai expérimenté le jeu avec une orchestre pour la 1ère première fois. J’ai appris à jouer avec un groupe, chambre à musique (chamber-music), à coopérer et me concentrer sur les moindres détails. En 2017-2018, j’ai rejoint l’orchestre des élèves (Lebanese national youth Orchestra LNYO) dirigé par Garo Avessian et le coach Mario El Rahi, et on a fait plusieurs concerts parmi lesquels le concert avec Matteo El Khodor le 23 décembre 201. En 2019, j’ai participé à plusieurs auditions pour les orchestres internationaux, et j’ai rejoint l’Orchestra Excellence, j’ai participé au Festival Suoni Dal Golfo reconnu maintenant comme Lerci Musical Festival. Le festival était de 6 aout jusqu’au 28 aout 2019. Cet orchestre est composé d’environ 60 musiciens. Ce fut un plaisir de participer à ce genre d’orchestres dont j’ai beaucoup appris des techniques… De plus, j’ai gagné le premier prix du talent show des écoles-USJ et j'ai reçu un niveau excellent de l'organisation libanaise pour le developpement avec la cooperation du Ministère d'éducation MEHE.
+    <p>  Je suis Grace Chabab, née à Beyrouth, Liban, le 12 juillet 2002. J’ai 18 ans et je suis une violoniste.  J’ai commencé à étudier le violon à 7 ans avec le professeur Ibrahim Hamzi au conservatoire national supérieur de musique (Liban) puis après avec maestro Mohammad Labban. et maintenant je m’entraine avec mr Ali Hassan pour mon examen du baccalauréat. Durant mes études, j’ai joué plusieurs pièces musicales pour plusieurs compositeurs : Vivaldi, Bach, Mozart, Bruch, Beethoven, Viotti, kreutzer... En 2016, j’ai participé à un workshop présenté par « The 2016 Lebanon International String/ Orchestra Workshop-LISOW » au cours duquel j’ai expérimenté le jeu avec une orchestre pour la 1ère première fois. J’ai appris à jouer avec un groupe, chambre à musique (chamber-music), à coopérer et me concentrer sur les moindres détails. En 2017-2018, j’ai rejoint l’orchestre des élèves (Lebanese national youth Orchestra LNYO) dirigé par Garo Avessian et le coach Mario El Rahi, et on a fait plusieurs concerts parmi lesquels le concert avec Matteo El Khodor le 23 décembre 201. En 2019, j’ai participé à plusieurs auditions pour les orchestres internationaux, et j’ai rejoint l’Orchestra Excellence, j’ai participé au Festival Suoni Dal Golfo reconnu maintenant comme Lerci Musical Festival. Le festival était de 6 aout jusqu’au 28 aout 2019. Cet orchestre est composé d’environ 60 musiciens. Ce fut un plaisir de participer à ce genre d’orchestres dont j’ai beaucoup appris des techniques… De plus, j’ai gagné le premier prix du talent show des écoles-USJ et j'ai reçu un niveau excellent de l'organisation libanaise pour le developpement avec la cooperation du Ministère d'éducation MEHE.
     </p>
     <img src="./photos/usj-1er-prix.jpg" alt="le 1er prix à l'usj-talentshow">
     <img src="./photos/orchestra-excellence.jpg" alt="orchestra excellence Tchaikovsky concert">
@@ -28,35 +28,52 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/quznVR6toE4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
   <h3>Le concert The 2016 Lebanon International String/Orchestra Workshop - LISOW </h3>
-          <video src="./videos/duo-NDU.mp4" width="560" height="315" controls> Duo - Chamber music </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XFpBkChgJrI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br>
   <h3>c'est le 1er concert avec l'orchestre LNYO</h3>
         <img src="./photos/13fevrier2018.jpg" alt="Le 1er concert avec LNYO" >
-        <video src="./videos/mozart-divertimento-3rdmvt.mp4" controls>mozart divertimento 3rd mvt</video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/osmSDfEgR0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
   <h3>concert le 2 juillet 2018 à 8:30, St. joseph Church,Monot</h3>
         <img src="./photos/concert2july2018.jpg" alt="concert in 2019">
-        <video src="./videos/palladio.mp4" width="560" height="315" controls></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/tX7R-fK8FjM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
-  <h3>concert le 2 juillet 2019</h3>
-        <img src="./photos/2july2019.jpg" alt="concert le 2 juillet 2019">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/8EdHKMyeJBE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <br><br>
+  <h3>video clip avec Marwan Khoury</h3>
+        <img src="./photos/kel-el-qasayed.jpg" alt="le video clip-kel el qasayed">
+
   <h3>concert le 28 fevrier 2019</h3>
         <img src="./photos/28fev2019.jpg" alt="28 fevrier 2019 concert">
-        <video src="./videos/mozart-symphony-no25.mp4" width="560" height="315" controls> </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/DtfYJVDadMw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
   <h3>Audition: orchetre des jeunes de la méditerannée(orchestre de Provence)</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/EYpJAcE73lk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gw0t7KE6IoU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
   <h3>concert 25 mars 2019 avec youth choir</h3>
         <img src="./photos/25march2019.jpg" alt="le concert 25 mars 2019 youth choir et youth orchestra">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/OuzAXSy-dYk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
+  <h3>concert le 2 juillet 2019</h3>
+        <img src="./photos/2july2019.jpg" alt="concert le 2 juillet 2019">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8EdHKMyeJBE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br>
+  <h3>Concert no 1 avec khaled Mouzanar</h3>
+        <p><strong>rehearsal for the first concert with Orchestra Excellence and Khaled Mouzanar in San Terenzo - Lerici</strong><br>
+          10 Aout 2019, concert en ouverture du Festival Suoni dal Golfo à Lerici - Italie. <br>
+          khaled Mouzanar - piano <br>
+          Mario Stephano Pietrodarchi - Bandoneon/accordeon <br>
+          Anastasiya Petryshak - violon <br>
+          Rasha Rizk - vocal <br>
+          plus de soixante-dix musicians et solistes sur scène sous la direction de Gianluca Marciano.</p><br><br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/WTKYU11cpNg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <br><br>
   <h3>concert numero 2 avec l'orchestre excellene au festival Suoni dal Golfo</h3>
-        <p><strong>photo prise après le 4ème concert Orchestra Excellence</strong></p><br>
-        <img src="./photos/sergey-krylov.jpg" alt="photo au concert Tchaikovsky">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/PZ8oVrp_KyY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
+    <h4>photo prise après le 4ème concert Orchestra Excellence</h4>
+        <p>avec le virtuoso violoniste <strong>Sergey krylov</strong></p><br>
+        <img src="./photos/sergey-krylov.jpg" alt="photo au concert Tchaikovsky">
+
   <h3>Orchestra excellene, Tellaro-Italy</h3>
         <img src="./photos/orchestra-tellaro.jpg" alt="une photo de l'orchetre à Tellaro">
         <br><br>
@@ -76,7 +93,9 @@
   <p>rehearsal Mozart Requiem in D minor avec l'orchestra excellene</p><br><br>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/V2922SRYqmU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <br><br>
-
+<h2>promo 2020 Performance</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/EvrSrrrYsYg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <br><br>
 <h2>Voici quelques morceaux, Pièces de violons à écouter :</h2>
    <ol>
      <li>Bruch violin concerto in G minor </li>
@@ -90,9 +109,6 @@
 <h2>Les 5 morceaux/ pièces les plus difficiles</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/AEK_ur1yqy4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <br><br>
-<h2>promo 2020 Performance</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/EvrSrrrYsYg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br><br>
 </body>
 
 <footer>
