--- a/les-elements.html
+++ b/les-elements.html
@@ -19,7 +19,7 @@
     <img src="./photos/elements_du_violon.jpg" alt="les éléments de composition du violon">
 <p>Le violon est constitué de 70 à 85 pièces, collées ou emboîtées, qui  forment trois grandes parties : <strong>le corps</strong>, <strong>la manche</strong> et <strong>la tête</strong>.<br /><br />
 <strong>La tête</strong> est constituée de <strong>la volute</strong> et<strong> du cheviller</strong>. La volute se présente le plus souvent sous forme d'une spirale qui s'enroule. Les chevilles servent quant à elles à accorder l'instrument, c'est à dire tendre ou détendre les cordes du violon.<br /><br />
-<strong>Le manche</strong>:c’est la partie « principale » du violon puisque que c’est sur le manche que le violoniste déplace sa main gauche et joue. En opposition avec le reste de l’instrument, cette partie n’est pas vernie. De par son importance dans la qualité et le confort de jeu du musicien, cette partie est et doit être fabriquée avec le plus grand soin.<br /><br />
+<strong>Le manche</strong>: c’est la partie « principale » du violon puisque que c’est sur le manche que le violoniste déplace sa main gauche et joue. En opposition avec le reste de l’instrument, cette partie n’est pas vernie. De par son importance dans la qualité et le confort de jeu du musicien, cette partie est et doit être fabriquée avec le plus grand soin.<br /><br />
 <strong>le corps</strong>:La caisse de résonance est composée, sur le devant, d’une table d’harmonie, percée par 2 ouïes, à laquelle on oppose un fond. L’instrument compte également 6 éclisses ondulées sur ses côtés. À noter la présence d’un filet (3 brins de bois) incrusté dans la table et le fond pour suivre et souligner les courbures du violon et prévenir les cassures.
 À l’extrémité basse du violon, une courte cheville de bois dur est enfoncée dans le tasseau : appelée « bouton », elle sert à fixer le cordier, chargé de recevoir les cordes. À noter qu’un sifflet inférieur vient empêcher le cordier d’altérer la table d’harmonie.
 Entre la touche et le cordier se trouve le chevalet, situé au niveau des ouïes du violon. Ajourée, cette petite planchette d’érable supporte les cordes et transmet la vibration générée par le passage de l’archet.<br /><br /></p>
@@ -36,6 +36,8 @@ Entre la touche et le cordier se trouve le chevalet, situé au niveau des ouïes
   <p>Au talon de l’archet se trouve <strong>le bouton</strong> : il s’agit d’une vis destinée à régler la tension de la mèche, dont l’écrou se situe dans <strong>la hausse</strong>, sur laquelle se trouve la pastille, traditionnellement faite dans un matériau précieux (nacre, or, argent…).<br />
   Pour favoriser la préhension de l’archet, il est muni d’<strong>une poucette</strong>, au début de la baguette, suivie par <strong>la garniture</strong>. Un fil de métal fin entouré sur 4 centimètres, destiné à équilibrer l’ensemble et à protéger l’archet de l’usure.</p>
 
+<h2>quote</h2>
+<img src="./photos/violin-quotes.jpg" alt="une citation à propos du violon">
 
 </body>
 <footer>
