--- a/aboutme.html
+++ b/aboutme.html
@@ -99,7 +99,7 @@
 <h2>Voici quelques morceaux, Pièces de violons à écouter :</h2>
    <ol>
      <li>Bruch violin concerto in G minor </li>
-     <li>Sibeluis violin concerto  </li>
+     <li>Sibelius violin concerto in D minor  </li>
      <li>Tchaikovsky violin concerto in D major </li>
      <li>Beethoven romance in F major </li>
      <li>Paganini violin caprice no 24 </li>
