--- a/les-elements.html
+++ b/les-elements.html
@@ -3,45 +3,63 @@
   <head>
     <meta charset="utf-8">
     <title>les élements</title>
+    <link rel="stylesheet" href="./css/mon-style.css">
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">le violon</a>
+      <nav id="mon_menu">
+        <a href="./index.html">Home</a>
+        <a href="./les-elements.html">Les élements</a>
         <a href="./list-of-violinists.html">Liste des violonistes</a>
         <a href="./aboutme.html">About Me</a>
       </nav>
+      <div class="sidebar">
+            <a href="#elements_du_violon">les élements</a>
+            <a href="#archet">Les grandes parties d’un archet</a>
+            <a href="#quote">Citation</a>
+      </div>
     </header>
     <main>
       <h1> Le violon</h1>
-    </main>
-    <h2>Les éléments de composition du violon : </h2>
-    <img src="./photos/elements_du_violon.jpg" alt="les éléments de composition du violon">
-<p>Le violon est constitué de 70 à 85 pièces, collées ou emboîtées, qui  forment trois grandes parties : <strong>le corps</strong>, <strong>la manche</strong> et <strong>la tête</strong>.<br /><br />
-<strong>La tête</strong> est constituée de <strong>la volute</strong> et<strong> du cheviller</strong>. La volute se présente le plus souvent sous forme d'une spirale qui s'enroule. Les chevilles servent quant à elles à accorder l'instrument, c'est à dire tendre ou détendre les cordes du violon.<br /><br />
-<strong>Le manche</strong>: c’est la partie « principale » du violon puisque que c’est sur le manche que le violoniste déplace sa main gauche et joue. En opposition avec le reste de l’instrument, cette partie n’est pas vernie. De par son importance dans la qualité et le confort de jeu du musicien, cette partie est et doit être fabriquée avec le plus grand soin.<br /><br />
-<strong>le corps</strong>:La caisse de résonance est composée, sur le devant, d’une table d’harmonie, percée par 2 ouïes, à laquelle on oppose un fond. L’instrument compte également 6 éclisses ondulées sur ses côtés. À noter la présence d’un filet (3 brins de bois) incrusté dans la table et le fond pour suivre et souligner les courbures du violon et prévenir les cassures.
-À l’extrémité basse du violon, une courte cheville de bois dur est enfoncée dans le tasseau : appelée « bouton », elle sert à fixer le cordier, chargé de recevoir les cordes. À noter qu’un sifflet inférieur vient empêcher le cordier d’altérer la table d’harmonie.
-Entre la touche et le cordier se trouve le chevalet, situé au niveau des ouïes du violon. Ajourée, cette petite planchette d’érable supporte les cordes et transmet la vibration générée par le passage de l’archet.<br /><br /></p>
+      <div class="violon">
+      <img src="./photos/Stolen-Guadagnini-violin.jpg" alt="violon">
+      </div>
 
-<h2>Les grandes parties d’un archet</h2>
+  <h2 id="elements_du_violon"class="elements">Les éléments de composition du violon : </h2>
+    <div class="annotation">
+    <img src="./photos/elements_du_violon.jpg" alt="les éléments de composition du violon">
+    </div>
+      <p class="exp">Le violon est constitué de 70 à 85 pièces, collées ou emboîtées, qui  forment trois grandes parties : <strong>le corps</strong>, <strong>la manche</strong> et <strong>la tête</strong>.<br /><br />
+      <strong>La tête</strong> est constituée de <strong>la volute</strong> et<strong> du cheviller</strong>. La volute se présente le plus souvent sous forme d'une spirale qui s'enroule. Les chevilles servent quant à elles à accorder l'instrument, c'est à dire tendre ou détendre les cordes du violon.<br /><br />
+      <strong>Le manche</strong>: c’est la partie « principale » du violon puisque que c’est sur le manche que le violoniste déplace sa main gauche et joue. En opposition avec le reste de l’instrument, cette partie n’est pas vernie. De par son importance dans la qualité et le confort de jeu du musicien, cette partie est et doit être fabriquée avec le plus grand soin.<br /><br />
+      <strong>le corps</strong>:La caisse de résonance est composée, sur le devant, d’une table d’harmonie, percée par 2 ouïes, à laquelle on oppose un fond. L’instrument compte également 6 éclisses ondulées sur ses côtés. À noter la présence d’un filet (3 brins de bois) incrusté dans la table et le fond pour suivre et souligner les courbures du violon et prévenir les cassures.
+      À l’extrémité basse du violon, une courte cheville de bois dur est enfoncée dans le tasseau : appelée « bouton », elle sert à fixer le cordier, chargé de recevoir les cordes. À noter qu’un sifflet inférieur vient empêcher le cordier d’altérer la table d’harmonie.
+      Entre la touche et le cordier se trouve le chevalet, situé au niveau des ouïes du violon. Ajourée, cette petite planchette d’érable supporte les cordes et transmet la vibration générée par le passage de l’archet.<br /><br /></p>
+
+<h2 id="archet">Les grandes parties d’un archet</h2>
 <img src="./photos/archet.jpg" alt="l'archet">
-  <p>Étymologiquement, l’archet est le « petit arc » qui accompagne systématiquement (ou presque) tous les violonistes… Là encore, la connaissance de son vocabulaire conditionne sa bonne utilisation…<br /><br />
+  <p class="exp">Étymologiquement, l’archet est le « petit arc » qui accompagne systématiquement (ou presque) tous les violonistes… Là encore, la connaissance de son vocabulaire conditionne sa bonne utilisation…<br /><br />
 <h3>La Tête</h3>
-  <p>L’extrémité haute de l’archet abrite une<strong> plaque de tête</strong>, sous laquelle sont fixés les crins de chevaux. Cette protection peut être réalisée en ivoire, en argent, en or, en nacre ou en bois rares, voire en galalithe (un polymère ressemblant à l’ivoire). À son strict opposé se trouve <strong>la tête</strong> de l’archet.</p>
+  <p class="exp">L’extrémité haute de l’archet abrite une<strong> plaque de tête</strong>, sous laquelle sont fixés les crins de chevaux. Cette protection peut être réalisée en ivoire, en argent, en or, en nacre ou en bois rares, voire en galalithe (un polymère ressemblant à l’ivoire). À son strict opposé se trouve <strong>la tête</strong> de l’archet.</p>
 <h3>La Baguette</h3>
-  <p><strong>La mèche</strong> compte, en moyenne, environ 80 crins d’étalons, provenant de régions froides comme la Sibérie, la Mongolie ou la Mandchourie. Trop lisses pour produire un son, les crins doivent être frottés avec de la résine de pin ou <strong>colophane</strong>.<br />
+  <p class="exp"><strong>La mèche</strong> compte, en moyenne, environ 80 crins d’étalons, provenant de régions froides comme la Sibérie, la Mongolie ou la Mandchourie. Trop lisses pour produire un son, les crins doivent être frottés avec de la résine de pin ou <strong>colophane</strong>.<br />
   À l’opposé de la mèche, il y a<strong> la baguette</strong> : légèrement cambrée, elle est traditionnellement fabriquée en bois du Brésil, même si certains modèles peuvent être conçus avec d’autres matières comme la fibre de carbone.</p>
 <h3>La Poignée</h3>
-  <p>Au talon de l’archet se trouve <strong>le bouton</strong> : il s’agit d’une vis destinée à régler la tension de la mèche, dont l’écrou se situe dans <strong>la hausse</strong>, sur laquelle se trouve la pastille, traditionnellement faite dans un matériau précieux (nacre, or, argent…).<br />
+  <p class="exp">Au talon de l’archet se trouve <strong>le bouton</strong> : il s’agit d’une vis destinée à régler la tension de la mèche, dont l’écrou se situe dans <strong>la hausse</strong>, sur laquelle se trouve la pastille, traditionnellement faite dans un matériau précieux (nacre, or, argent…).<br />
   Pour favoriser la préhension de l’archet, il est muni d’<strong>une poucette</strong>, au début de la baguette, suivie par <strong>la garniture</strong>. Un fil de métal fin entouré sur 4 centimètres, destiné à équilibrer l’ensemble et à protéger l’archet de l’usure.</p>
 
-<h2>quote</h2>
+<h2 id="quote">Citation :</h2>
+<div class="violon">
 <img src="./photos/violin-quotes.jpg" alt="une citation à propos du violon">
+</div>
+</main>
+
+<footer>
+  <p>Auteur: Grace Chabab</p> <br>
+  <a href="https://www.instagram.com/grace_chabab/" target="_blank" rel="nofollow" sl-processed="1" class="fa fa-instagram">Instagram</a>
+  <a href="https://www.facebook.com/grace.chabab" target="_blank" rel="nofollow" sl-processed="1" class="fa fa-facebook">Facebook</a><br><br>
+  <p><a href="mailto:gracechabab1@hotmail.com" class="email">gracechabab1@hotmail.com</a></p>
+</footer>
 
 </body>
-<footer>
-  <p>Auteur: Grace Chabab</p>
-  <p><a href="mailto:gracechabab1@hotmail.com">gracechabab1@hotmail.com</a></p>
-</footer>
 </html>
