--- a/aboutme.html
+++ b/aboutme.html
@@ -3,61 +3,78 @@
   <head>
     <meta charset="utf-8">
     <title>About me</title>
+    <link rel="stylesheet" href="./css/mon-style.css">
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">le violon</a>
+      <nav id="mon_menu">
+        <a href="./index.html">Home</a>
         <a href="./les-elements.html">Les élements</a>
         <a href="./list-of-violinists.html">Liste des violonistes</a>
+        <a href="./aboutme.html">About Me</a>
       </nav>
+      <div class="sidebar">
+            <a href="#experience">expérience </a>
+            <a href="#photos_videos">photos et vidéos :</a>
+            <a href="#audition">audition</a>
+            <a href="#workshop">workshop</a>
+            <a href="#videoclip">vidéoclip</a>
+            <a href="#LNYO">LNYO</a>
+            <a href="#italy">concert en Italie</a>
+            <a href="#promo">promo 2020</a>
+            <a href="#morceaux">morceaux à écouter</a>
+            <a href="#pieces">pièces les plus difficiles</a>
+      </div>
     </header>
-<main>
-      <h1> Mon expérience </h1>
-</main>
-      <img src="./photos/grace-violinist.jpg" alt="Grace Chabab: violoniste"><br><br>
-    <p>  Je suis Grace Chabab, née à Beyrouth, Liban, le 12 juillet 2002. J’ai 18 ans et je suis une violoniste.  J’ai commencé à étudier le violon à 7 ans avec le professeur Ibrahim Hamzi au conservatoire national supérieur de musique (Liban) puis après avec maestro Mohammad Labban. et maintenant je m’entraine avec mr Ali Hassan pour mon examen du baccalauréat. Durant mes études, j’ai joué plusieurs pièces musicales pour plusieurs compositeurs : Vivaldi, Bach, Mozart, Bruch, Beethoven, Viotti, kreutzer... En 2016, j’ai participé à un workshop présenté par « The 2016 Lebanon International String/ Orchestra Workshop-LISOW » au cours duquel j’ai expérimenté le jeu avec une orchestre pour la 1ère première fois. J’ai appris à jouer avec un groupe, chambre à musique (chamber-music), à coopérer et me concentrer sur les moindres détails. En 2017-2018, j’ai rejoint l’orchestre des élèves (Lebanese national youth Orchestra LNYO) dirigé par Garo Avessian et le coach Mario El Rahi, et on a fait plusieurs concerts parmi lesquels le concert avec Matteo El Khodor le 23 décembre 201. En 2019, j’ai participé à plusieurs auditions pour les orchestres internationaux, et j’ai rejoint l’Orchestra Excellence, j’ai participé au Festival Suoni Dal Golfo reconnu maintenant comme Lerci Musical Festival. Le festival était de 6 aout jusqu’au 28 aout 2019. Cet orchestre est composé d’environ 60 musiciens. Ce fut un plaisir de participer à ce genre d’orchestres dont j’ai beaucoup appris des techniques… De plus, j’ai gagné le premier prix du talent show des écoles-USJ et j'ai reçu un niveau excellent de l'organisation libanaise pour le developpement avec la cooperation du Ministère d'éducation MEHE.
-    </p>
-    <img src="./photos/usj-1er-prix.jpg" alt="le 1er prix à l'usj-talentshow">
-    <img src="./photos/orchestra-excellence.jpg" alt="orchestra excellence Tchaikovsky concert">
-    <img src="./photos/momtaz.jpg" alt="niveau excellent">
-<h2>Voici quelques photos et vidéos :</h2>
+    <main>
+      <h1> Le violon</h1>
+      <div class="violon">
+      <img src="./photos/Stolen-Guadagnini-violin.jpg" alt="violon">
+      </div>
+
+    <h2 id="experience"> Mon expérience </h2>
+    <img src="./photos/grace-violinist.jpg" alt="Grace Chabab: violoniste" class="image1">
+    <p class="exp">Je suis Grace Chabab, née à Beyrouth, Liban, le 12 juillet 2002. J’ai 18 ans et je suis une violoniste.  J’ai commencé à étudier le violon à 7 ans avec le professeur Ibrahim Hamzi au conservatoire national supérieur de musique (Liban) puis après avec maestro Mohammad Labban. et maintenant je m’entraine avec mr Ali Hassan pour mon examen du baccalauréat. Durant mes études, j’ai joué plusieurs pièces musicales pour plusieurs compositeurs : Vivaldi, Bach, Mozart, Bruch, Beethoven, Viotti, kreutzer... En 2016, j’ai participé à un workshop présenté par « The 2016 Lebanon International String/ Orchestra Workshop-LISOW » au cours duquel j’ai expérimenté le jeu avec une orchestre pour la 1ère première fois. J’ai appris à jouer avec un groupe, chambre à musique (chamber-music), à coopérer et me concentrer sur les moindres détails. En 2017-2018, j’ai rejoint l’orchestre des élèves (Lebanese national youth Orchestra LNYO) dirigé par Garo Avessian et le coach Mario El Rahi, et on a fait plusieurs concerts parmi lesquels le concert avec Matteo El Khodor le 23 décembre 201. En 2019, j’ai participé à plusieurs auditions pour les orchestres internationaux, et j’ai rejoint l’Orchestra Excellence, j’ai participé au Festival Suoni Dal Golfo reconnu maintenant comme Lerci Musical Festival. Le festival était de 6 aout jusqu’au 28 aout 2019. Cet orchestre est composé d’environ 60 musiciens. Ce fut un plaisir de participer à ce genre d’orchestres dont j’ai beaucoup appris des techniques… De plus, j’ai gagné le premier prix du talent show des écoles-USJ et j'ai reçu un niveau excellent de l'organisation libanaise pour le developpement avec la cooperation du Ministère d'éducation MEHE.
+    </p><br><br>
+    <img src="./photos/usj-1er-prix.jpg" alt="le 1er prix à l'usj-talentshow"> <br>
+    <img src="./photos/orchestra-excellence.jpg" alt="orchestra excellence Tchaikovsky concert"> <br>
+    <img src="./photos/momtaz.jpg" alt="niveau excellent"> <br>
+<h2 id="photos_videos">Voici quelques photos et vidéos :</h2>
     <img src="./photos/concert_with_LNYO.jpg" alt="concert avec LNYO" >
     <br><br>
-  <h3>audition à Saida </h3>
+  <h3 id="audition">audition à Saida </h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/quznVR6toE4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
-  <h3>Le concert The 2016 Lebanon International String/Orchestra Workshop - LISOW </h3>
+  <h3 id="workshop">Le concert The 2016 Lebanon International String/Orchestra Workshop - LISOW </h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/XFpBkChgJrI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
-  <h3>c'est le 1er concert avec l'orchestre LNYO</h3>
+  <h3 id="videoclip">video clip avec Marwan Khoury</h3>
+        <img src="./photos/kel-el-qasayed.jpg" alt="le video clip-kel el qasayed">
+  <h3 id="LNYO">c'est le 1er concert avec l'orchestre LNYO</h3>
         <img src="./photos/13fevrier2018.jpg" alt="Le 1er concert avec LNYO" >
         <iframe width="560" height="315" src="https://www.youtube.com/embed/osmSDfEgR0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
-  <h3>concert le 2 juillet 2018 à 8:30, St. joseph Church,Monot</h3>
+  <h3 id="LNYO">concert le 2 juillet 2018 à 8:30, St. joseph Church,Monot</h3>
         <img src="./photos/concert2july2018.jpg" alt="concert in 2019">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/tX7R-fK8FjM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
-  <h3>video clip avec Marwan Khoury</h3>
-        <img src="./photos/kel-el-qasayed.jpg" alt="le video clip-kel el qasayed">
-
-  <h3>concert le 28 fevrier 2019</h3>
+  <h3 id="LNYO">concert le 28 fevrier 2019</h3>
         <img src="./photos/28fev2019.jpg" alt="28 fevrier 2019 concert">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/DtfYJVDadMw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
-  <h3>Audition: orchetre des jeunes de la méditerannée(orchestre de Provence)</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/EYpJAcE73lk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/gw0t7KE6IoU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <br><br>
-  <h3>concert 25 mars 2019 avec youth choir</h3>
+  <h3 id="LNYO">concert 25 mars 2019 avec youth choir</h3>
         <img src="./photos/25march2019.jpg" alt="le concert 25 mars 2019 youth choir et youth orchestra">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/OuzAXSy-dYk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
-  <h3>concert le 2 juillet 2019</h3>
+  <h3 id="LNYO">concert le 2 juillet 2019</h3>
         <img src="./photos/2july2019.jpg" alt="concert le 2 juillet 2019">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8EdHKMyeJBE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
-  <h3>Concert no 1 avec khaled Mouzanar</h3>
+  <h3 id="audition">Audition: orchetre des jeunes de la méditerannée(orchestre de Provence)</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/EYpJAcE73lk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gw0t7KE6IoU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br>
+  <h3 id="italy">Concert no 1 avec khaled Mouzanar</h3>
         <p><strong>rehearsal for the first concert with Orchestra Excellence and Khaled Mouzanar in San Terenzo - Lerici</strong><br>
           10 Aout 2019, concert en ouverture du Festival Suoni dal Golfo à Lerici - Italie. <br>
           khaled Mouzanar - piano <br>
@@ -67,16 +84,23 @@
           plus de soixante-dix musicians et solistes sur scène sous la direction de Gianluca Marciano.</p><br><br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/WTKYU11cpNg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <br><br>
-  <h3>concert numero 2 avec l'orchestre excellene au festival Suoni dal Golfo</h3>
+  <h3 id="italy">concert numero 2 avec l'orchestre excellene au festival Suoni dal Golfo</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/PZ8oVrp_KyY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
     <h4>photo prise après le 4ème concert Orchestra Excellence</h4>
         <p>avec le virtuoso violoniste <strong>Sergey krylov</strong></p><br>
         <img src="./photos/sergey-krylov.jpg" alt="photo au concert Tchaikovsky">
 
-  <h3>Orchestra excellene, Tellaro-Italy</h3>
+  <h3 id="italy">Orchestra excellene, Tellaro-Italy</h3>
         <img src="./photos/orchestra-tellaro.jpg" alt="une photo de l'orchetre à Tellaro">
         <br><br>
+  <h3 id="italy">concert numero 6 a Lerici avec Aleph et 8ème art</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/zW_MGm-Wm0A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br>
+  <h3 id="italy">Final concert-Lerici(nb 10)</h3>
+  <p>rehearsal Mozart Requiem in D minor avec l'orchestra excellene</p><br><br>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/V2922SRYqmU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <br><br>
   <h3>moi quand j'étais petite</h3>
         <img src="./photos/me.jpg" alt="jeune violoniste Grace">
         <br><br>
@@ -86,34 +110,31 @@
         <p>al watan vidéoclip avec Assi El Hallani</p>
         <img src="./photos/al-watan.jpg" alt="video clip avec assi el hallani">
         <br><br>
-  <h3>concert numero 6 a Lerici avec Aleph et 8ème art</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/zW_MGm-Wm0A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <br><br>
-  <h3>Final concert-Lerici(nb 10)</h3>
-  <p>rehearsal Mozart Requiem in D minor avec l'orchestra excellene</p><br><br>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/V2922SRYqmU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <br><br>
-<h2>promo 2020 Performance</h2>
+<h2 id="promo">promo 2020 Performance</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/EvrSrrrYsYg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <br><br>
-<h2>Voici quelques morceaux, Pièces de violons à écouter :</h2>
+<h2 id="morceaux">Voici quelques morceaux, Pièces de violons à écouter :</h2>
    <ol>
-     <li>Bruch violin concerto in G minor </li>
-     <li>Sibelius violin concerto in D minor  </li>
-     <li>Tchaikovsky violin concerto in D major </li>
-     <li>Beethoven romance in F major </li>
-     <li>Paganini violin caprice no 24 </li>
-     <li>Bach chaconne partita 2 </li>
+     <li class="morceau">Bruch violin concerto in G minor </li>
+     <li class="morceau">Sibelius violin concerto in D minor  </li>
+     <li class="morceau">Tchaikovsky violin concerto in D major </li>
+     <li class="morceau">Beethoven romance in F major </li>
+     <li class="morceau">Paganini violin caprice no 24 </li>
+     <li class="morceau">Bach chaconne partita 2 </li>
   </ol>
 
-<h2>Les 5 morceaux/ pièces les plus difficiles</h2>
+<h2 id="pieces">Les 5 morceaux/ pièces les plus difficiles</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/AEK_ur1yqy4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <br><br>
-</body>
+
+</main>
 
 <footer>
-  <p>Auteur: Grace Chabab</p>
-  <p><a href="mailto:gracechabab1@hotmail.com">gracechabab1@hotmail.com</a></p>
+  <p>Auteur: Grace Chabab</p> <br>
+  <a href="https://www.instagram.com/grace_chabab/" target="_blank" rel="nofollow" sl-processed="1" class="fa fa-instagram">Instagram</a>
+  <a href="https://www.facebook.com/grace.chabab" target="_blank" rel="nofollow" sl-processed="1" class="fa fa-facebook">Facebook</a><br><br>
+  <p><a href="mailto:gracechabab1@hotmail.com" class="email">gracechabab1@hotmail.com</a></p>
 </footer>
 
+</body>
 </html>
