--- a/list-of-violinists.html
+++ b/list-of-violinists.html
@@ -3,50 +3,61 @@
   <head>
     <meta charset="utf-8">
     <title>liste des violonistes</title>
+    <link rel="stylesheet" href="./css/mon-style.css">
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">le violon</a>
+      <nav id="mon_menu">
+        <a href="./index.html">Home</a>
         <a href="./les-elements.html">Les élements</a>
+        <a href="./list-of-violinists.html">Liste des violonistes</a>
         <a href="./aboutme.html">About Me</a>
       </nav>
+      <div class="sidebar">
+            <a href="#ère_baroque">ère baroque</a>
+            <a href="#ère_classique">ère classique</a>
+            <a href="#ère_romantique">ère romantique</a>
+            <a href="#20e-21e_siècles">20e-21e siècles</a>
+      </div>
     </header>
     <main>
       <h1> Le violon</h1>
-    </main>
+      <div class="violon">
+      <img src="./photos/Stolen-Guadagnini-violin.jpg" alt="violon">
+      </div>
+
     <h2>Les plus célèbres violonistes : </h2>
-    <h3>ère baroque</h3>
+    <h3 id="violinists">ère baroque</h3>
     <p><strong>La période baroque</strong> était une ère de musique entre <strong>1650 et 1750</strong>. Elle se caractérise par des formes musicales strictes et des œuvres hautement ornementales.  </p>
       <ul>
-        <li><a href="https://fr.wikipedia.org/wiki/Jean-S%C3%A9bastien_Bach" target="_blank">Johann Sebastian Bach </a> (1685 – 1750)</li>
-        <li><a href="https://fr.wikipedia.org/wiki/Georg_Friedrich_Haendel" target="_blank">Georg Friedrich Haendel </a> (1685 - 1759)</li>
-        <li><a href="https://fr.wikipedia.org/wiki/Antonio_Vivaldi" target="_blank"> Antonio Vivaldi </a>(1678 – 1741)</li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Jean-S%C3%A9bastien_Bach" target="_blank">Johann Sebastian Bach </a> (1685 – 1750)</li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Georg_Friedrich_Haendel" target="_blank">Georg Friedrich Haendel </a> (1685 - 1759)</li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Antonio_Vivaldi" target="_blank"> Antonio Vivaldi </a>(1678 – 1741)</li>
       </ul>
-    <h3>ère classique</h3>
+    <h3 id="violinists">ère classique</h3>
     <p><strong>La période classique</strong> était une ère de musique classique entre environ <strong>1750 et 1800</strong>.La période classique se situe entre les périodes baroque et romantique. Elle a une texture plus claire et plus claire que la musique baroque et moins complexe et elle est principalement homophonique.</p>
       <ul>
-        <li><a href="https://fr.wikipedia.org/wiki/Joseph_Haydn" target="_blank">Franz Joseph Haydn</a> (1732 - 1809)</li>
-        <li><a href="https://fr.wikipedia.org/wiki/Giovanni_Battista_Viotti" target="_blank">Giovanni Battista Viotti</a> (1755 - 1824)</li>
-        <li><a href="https://fr.wikipedia.org/wiki/Rodolphe_Kreutzer" target="_blank">Rodolphe Kreutzer</a> (1766 – 1831)</li>
-        <li><a href="https://fr.wikipedia.org/wiki/Pierre_Rode" target="_blank">Pierre Rode</a> (1774 – 1830)</li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Joseph_Haydn" target="_blank">Franz Joseph Haydn</a> (1732 - 1809)</li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Giovanni_Battista_Viotti" target="_blank">Giovanni Battista Viotti</a> (1755 - 1824)</li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Rodolphe_Kreutzer" target="_blank">Rodolphe Kreutzer</a> (1766 – 1831)</li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Pierre_Rode" target="_blank">Pierre Rode</a> (1774 – 1830)</li>
       </ul>
 
-    <h3>ère romantique</h3>
+    <h3 id="violinists">ère romantique</h3>
     <p><strong>La période romantique</strong> était une ère de musique entre environ <strong>1800 et 1860</strong>. Elle se caractérise par la musique de l'expression individuelle, marquée par la mélodie et l'harmonie et montre des extrêmes au niveau du registre et de la dynamique. L'orchestre est de plus grande taille qu'au classique (plus de 90 instruments) et un retour à l'équilibre entre les clefs majeures et mineures.</p>
     <ul>
-        <li><a href="https://fr.wikipedia.org/wiki/Jacques_F%C3%A9r%C3%A9ol_Mazas" target="_blank">Jacques Féréol Mazas</a> (1782 – 1849)</li>
-        <li><a href="https://fr.wikipedia.org/wiki/Niccol%C3%B2_Paganini" target="_blank">Niccolò Paganini</a> (1782 - 1840)</li>
-        <li><a href="https://fr.wikipedia.org/wiki/Charles-Auguste_de_B%C3%A9riot" target="_blank">Charles Auguste de Bériot</a> (1802 – 1870) </li>
-        <li><a href="https://en.wikipedia.org/wiki/Fran%C3%A7ois_Schubert" target="_blank">François Schubert</a> (1808 – 1878)</li>
-        <li><a href="https://en.wikipedia.org/wiki/Jakob_Dont" target="_blank">Jakob Dont</a> (1815 – 1888)</li>
-        <li><a href="https://en.wikipedia.org/wiki/Henryk_Wieniawski" target="_blank">Henryk Wieniawski</a> (1835 – 1880)</li>
-        <li><a href="https://en.wikipedia.org/wiki/Pablo_de_Sarasate" target="_blank">Pablo de Sarasate</a> (1844 – 1908)</li>
-        <li><a href="https://en.wikipedia.org/wiki/Eug%C3%A8ne_Ysa%C3%BFe" target="_blank">Eugène Ysaÿe</a> (1858 - 1931) </li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Jacques_F%C3%A9r%C3%A9ol_Mazas" target="_blank">Jacques Féréol Mazas</a> (1782 – 1849)</li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Niccol%C3%B2_Paganini" target="_blank">Niccolò Paganini</a> (1782 - 1840)</li>
+        <li class="link"><a href="https://fr.wikipedia.org/wiki/Charles-Auguste_de_B%C3%A9riot" target="_blank">Charles Auguste de Bériot</a> (1802 – 1870) </li>
+        <li class="link"><a href="https://en.wikipedia.org/wiki/Fran%C3%A7ois_Schubert" target="_blank">François Schubert</a> (1808 – 1878)</li>
+        <li class="link"><a href="https://en.wikipedia.org/wiki/Jakob_Dont" target="_blank">Jakob Dont</a> (1815 – 1888)</li>
+        <li class="link"><a href="https://en.wikipedia.org/wiki/Henryk_Wieniawski" target="_blank">Henryk Wieniawski</a> (1835 – 1880)</li>
+        <li class="link"><a href="https://en.wikipedia.org/wiki/Pablo_de_Sarasate" target="_blank">Pablo de Sarasate</a> (1844 – 1908)</li>
+        <li class="link"><a href="https://en.wikipedia.org/wiki/Eug%C3%A8ne_Ysa%C3%BFe" target="_blank">Eugène Ysaÿe</a> (1858 - 1931) </li>
     </ul>
 
-    <h3>20e-21e siècles</h3>
-        <p><strong>Fritz Kreisler</strong> (1875 - 1962)<br><br>
+    <h3 id="violinists">20e-21e siècles</h3>
+        <p class="exp"><strong>Fritz Kreisler</strong> (1875 - 1962)<br><br>
         Ce violoniste et compositeur d'origine autrichienne est largement salué comme l'un des meilleurs violonistes de tous les temps. L'expression personnelle qu'il a insufflée dans ses performances, contenant un tel phrasé expressif, un vibrato passionné et une concentration mélodique, a fait en sorte que son style reste très reconnaissable, même aujourd'hui. Il est apparu sur la couverture du magazine Time, le 2 février 1925, et ses enregistrements et compositions classiques sont encore largement célébrés.<br><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/LWV2WFW0PVQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br>
 
@@ -76,7 +87,7 @@
         et premier prix au Concours international de violon Henryk Wieniawski à Varsovie  en 1935.<br><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/kDkaWj4WJn8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br>
 
-        <strong><a href="https://en.wikipedia.org/wiki/Jaap_Schr%C3%B6der" target="_blank">Jaap Schröder</a></strong> (1925 – 2020)<br><br>
+        <strong><a href="https://en.wikipedia.org/wiki/Jaap_Schr%C3%B6der" target="_blank" class="more">Jaap Schröder</a></strong> (1925 – 2020)<br><br>
         Jaap Schröder ou Jaap Schroeder était un violoniste, chef d'orchestre et pédagogue néerlandais. Il a étudié au Conservatoire d'Amsterdam et à la Sorbonne en France. Dans les années 1960, il a été membre du groupe de musique ancienne néerlandais Concerto Amsterdam et a réalisé des enregistrements avec Gustav Leonhardt, Anner Bylsma, Frans Brüggen et d'autres.
         Il a étudié au Conservatoire d'Amsterdam et à la Sorbonne en France. Dans les années 1960, il a été membre du groupe de musique ancienne néerlandais Concerto Amsterdam et a fait des enregistrements avec Gustav Leonhardt, Anner Bylsma, Frans Brüggen et d'autres. Depuis 1981, il a été directeur et premier violon de l'Académie de musique ancienne et en 1982, il a été nommé directeur musical invité des Smithsonian Chamber Players. Il a été membre du corps professoral de la Schola Cantorum Basiliensis, de la Yale School of Music et du Conservatoire de Luxembourg.<br><br>
 
@@ -141,11 +152,16 @@
   <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YipD8Npugvg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br>
   </p><br><br>
-</body>
+
+
+</main>
 
 <footer>
-  <p>Auteur: Grace Chabab</p>
-  <p><a href="mailto:gracechabab1@hotmail.com">gracechabab1@hotmail.com</a></p>
+  <p>Auteur: Grace Chabab</p> <br>
+  <a href="https://www.instagram.com/grace_chabab/" target="_blank" rel="nofollow" sl-processed="1" class="fa fa-instagram">Instagram</a>
+  <a href="https://www.facebook.com/grace.chabab" target="_blank" rel="nofollow" sl-processed="1" class="fa fa-facebook">Facebook</a><br><br>
+  <p><a href="mailto:gracechabab1@hotmail.com" class="email">gracechabab1@hotmail.com</a></p>
 </footer>
 
+</body>
 </html>
