mise a jour 2 le 23/4/2021

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <dl>
       <dt>La sourdine d'appartement, destinée à limiter le bruit généré par le violon</dt>
 
-      <dd><img src="./photos/violin_mute.jpg" alt="sourdine d'appartement"></dd>
+      <dd><img src="./photos/Violin_mute.jpg" alt="sourdine d'appartement"></dd>
 
       <dt>La sourdine d'orchestre, destinée, soit à éviter que le violon ne couvre les sons des autres instruments soit, dans le cadre d'un concerto pour violon, à lui offrir un timbre plus agréable pour l'oreille des spectateurs.</dt>
       <dd><img src="./photos/sourdine.jpg" alt="sourdine d'orchestre"></dd>
