--- a/list-of-violinists.html
+++ b/list-of-violinists.html
@@ -27,14 +27,14 @@
       </div>
 
     <h2>Les plus célèbres violonistes : </h2>
-    <h3 id="violinists">ère baroque</h3>
+    <h3 id="ère_baroque" class="violinists">ère baroque</h3>
     <p><strong>La période baroque</strong> était une ère de musique entre <strong>1650 et 1750</strong>. Elle se caractérise par des formes musicales strictes et des œuvres hautement ornementales.  </p>
       <ul>
         <li class="link"><a href="https://fr.wikipedia.org/wiki/Jean-S%C3%A9bastien_Bach" target="_blank">Johann Sebastian Bach </a> (1685 – 1750)</li>
         <li class="link"><a href="https://fr.wikipedia.org/wiki/Georg_Friedrich_Haendel" target="_blank">Georg Friedrich Haendel </a> (1685 - 1759)</li>
         <li class="link"><a href="https://fr.wikipedia.org/wiki/Antonio_Vivaldi" target="_blank"> Antonio Vivaldi </a>(1678 – 1741)</li>
       </ul>
-    <h3 id="violinists">ère classique</h3>
+    <h3 id="ère classique" class="violinists">ère classique</h3>
     <p><strong>La période classique</strong> était une ère de musique classique entre environ <strong>1750 et 1800</strong>.La période classique se situe entre les périodes baroque et romantique. Elle a une texture plus claire et plus claire que la musique baroque et moins complexe et elle est principalement homophonique.</p>
       <ul>
         <li class="link"><a href="https://fr.wikipedia.org/wiki/Joseph_Haydn" target="_blank">Franz Joseph Haydn</a> (1732 - 1809)</li>
@@ -43,7 +43,7 @@
         <li class="link"><a href="https://fr.wikipedia.org/wiki/Pierre_Rode" target="_blank">Pierre Rode</a> (1774 – 1830)</li>
       </ul>
 
-    <h3 id="violinists">ère romantique</h3>
+    <h3 id="ère_romantique" class="violinists">ère romantique</h3>
     <p><strong>La période romantique</strong> était une ère de musique entre environ <strong>1800 et 1860</strong>. Elle se caractérise par la musique de l'expression individuelle, marquée par la mélodie et l'harmonie et montre des extrêmes au niveau du registre et de la dynamique. L'orchestre est de plus grande taille qu'au classique (plus de 90 instruments) et un retour à l'équilibre entre les clefs majeures et mineures.</p>
     <ul>
         <li class="link"><a href="https://fr.wikipedia.org/wiki/Jacques_F%C3%A9r%C3%A9ol_Mazas" target="_blank">Jacques Féréol Mazas</a> (1782 – 1849)</li>
@@ -56,7 +56,7 @@
         <li class="link"><a href="https://en.wikipedia.org/wiki/Eug%C3%A8ne_Ysa%C3%BFe" target="_blank">Eugène Ysaÿe</a> (1858 - 1931) </li>
     </ul>
 
-    <h3 id="violinists">20e-21e siècles</h3>
+    <h3 id="20e-21e_siècles" class="violinists">20e-21e siècles</h3>
         <p class="exp"><strong>Fritz Kreisler</strong> (1875 - 1962)<br><br>
         Ce violoniste et compositeur d'origine autrichienne est largement salué comme l'un des meilleurs violonistes de tous les temps. L'expression personnelle qu'il a insufflée dans ses performances, contenant un tel phrasé expressif, un vibrato passionné et une concentration mélodique, a fait en sorte que son style reste très reconnaissable, même aujourd'hui. Il est apparu sur la couverture du magazine Time, le 2 février 1925, et ses enregistrements et compositions classiques sont encore largement célébrés.<br><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/LWV2WFW0PVQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br>
